fix overlay z-index( footer not clickable)

--- a/static/style.css
+++ b/static/style.css
@@ -76,7 +76,7 @@ a {
   /* transparent black */
   background: rgba(0, 0, 0, 0.7);
   /* middle layer, i.e. appears below the sidebar */
-  z-index: var(--z-fixed)-1;
+  z-index: 2;
   opacity: 0;
   /* animate the transition */
   transition: all 0.5s ease-in-out;
@@ -125,7 +125,7 @@ a {
   left: 250px;
   display: block;
   border-top: 1px solid #cfcfcff5;
-  z-index: -1;
+  z-index: 1;
 }
 
 .separator {
